--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "doctrine/dbal": "^2.9",
         "laravel/lumen-framework": "5.8.*"
     },
     "require-dev": {
@@ -20,6 +21,7 @@
     },
     "autoload-dev": {
         "classmap": [
+            "database",
             "tests/"
         ]
     },
