overhaul of the auth service in order to refactor the auth against a new capability system so the users can access the rest api endpoints and be authenticated

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_DEBUG=true
 APP_DOMAIN=reporangler.develop
 APP_PROTOCOL=http
+APP_ADMIN_DEFAULT_PASSWORD=admin
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL
