--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,17 @@
     "keywords": ["reporangler", "auth", "lumen"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../lib-reporangler"
+        }
+    ],
     "require": {
         "php": ">=7.1.3",
         "doctrine/dbal": "^2.9",
-        "laravel/lumen-framework": "5.8.*"
+        "laravel/lumen-framework": "5.8.*",
+        "reporangler/lib-reporangler": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
