--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,18 @@ APP_ENV=local
 APP_DEBUG=true
 APP_DOMAIN=reporangler.develop
 APP_PROTOCOL=http
+APP_ADMIN_DEFAULT_USERNAME=admin
 APP_ADMIN_DEFAULT_PASSWORD=admin
+APP_ADMIN_DEFAULT_EMAIL=admin@reporangler.develop
 
 LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL
+LOG_SLACK_WEBHOOK_URL=
+
+POSTGRES_HOST=auth_service_postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=auth_service
+POSTGRES_PASSWORD=passwordshouldbeasecret
+POSTGRES_DB=auth_service
 
 PHP_IDE_CONFIG=serverName=auth.reporangler.develop
 XDEBUG_IDE_KEY=PHPSTORM
@@ -18,4 +26,4 @@ XDEBUG_AUTOSTART=1
 XDEBUG_PROFILER_ENABLE=0
 XDEBUG_PROFILER_ENABLE_TRIGGER=1
 XDEBUG_PROFILER_ENABLE_TRIGGER_VALUE=xdebug
-XDEBUG_PROFILER_OUTPUT_DIR=/www=
+XDEBUG_PROFILER_OUTPUT_DIR=/www
