--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "require": {
         "php": ">=7.1.3",
         "doctrine/dbal": "^2.9",
-        "laravel/lumen-framework": "5.8.*",
+        "laravel/lumen-framework": "^6.0",
         "reporangler/lib-reporangler": "^1.1.0"
     },
     "require-dev": {
