add the missing files necessary to start the service

--- a/.env.dist
+++ b/.env.dist
@@ -16,7 +16,7 @@ POSTGRES_USER=auth_service
 POSTGRES_PASSWORD=passwordshouldbeasecret
 POSTGRES_DB=auth_service
 
-PHP_IDE_CONFIG=serverName=auth.reporangler.develop
+PHP_IDE_CONFIG=serverName=auth-service
 XDEBUG_IDE_KEY=PHPSTORM
 XDEBUG_ENABLE=1
 XDEBUG_HOST=10.254.254.254
